<resources>
    <string name="app_name">My_Add_app</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="create_account">Create Account?</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="buzzplay">buzzplay</string>
    <string name="Signup">Signup As Creator</string>
</resources>
