<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorblack"
    android:padding="40dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buzzplay"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/RopaSans-Regular"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:textColor="@color/white"
            android:hint="@string/username"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/botton_line"
            android:fontFamily="@font/RopaSans-Regular"
            android:inputType="text"
            android:paddingBottom="10dp"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:fontFamily="@font/RopaSans-Regular"
            android:textColor="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/botton_line"
            android:paddingBottom="10dp"
            />

        <Button
            android:id="@+id/loginbutton"
            android:fontFamily="@font/RopaSans-Regular"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@drawable/whitebuttonbackground"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp">
            <TextView
                android:id="@+id/frgtpswrd"
                android:layout_width="wrap_content"
                android:fontFamily="@font/RopaSans-Regular"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:textSize="16sp"
                android:layout_alignParentLeft="true" />
            <TextView
                android:id="@+id/createaccount"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:fontFamily="@font/RopaSans-Regular"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>